- add F1-F4, numpad, Z/X to combat keyboard controls
- fixes crash in combat with no shields
- reenable biorithyms color from gray to pulsing red
- implement keyboard shortcuts for entering x/y/z coord in Sector map
- fix sound controls
v 0.0.9
- keyboard utf8 support (supports shift for lowercase/uppercase etc)
- minor cosmetic updates
- implement F11 fullscreen for SDL-only mode (when no OpenGL)
- slow down some animations so they can actually be seen
v 0.0.8
- huge rewrite of c_utils.c to fix OpenGL and SDL bugs and crashes
v 0.0.7
- c_utils.c force correct filetypes and asserts and fix warnings
- debug tools: scr/cpr image converters
- enabled keyboard autorepeat
- allow game to run on systems without soundcards
v 0.0.6
- fix crash on starting and saving new game
- workaround SDL thread crashes at startup
- Makefile improvements
- make possible compiling without OpenGL
v 0.0.5
- see generating planet scan, instead of black screen with delay
- some cosmetic display fixes in weapons, and planets screens
- allows skipping too slow fading/fadein animations with any keypress
- reenables some easter eggs
- helper debug utility to see TEMP/*.scr files
- fix more Encode crew bugs, including bailing out on "Encode All"
v 0.0.4
- fix cargo crash with too strong filters
- fix cargo PgUp/PgDn
- fix mouse movement bugs
- fix conversation sluggishess and lost keypresses
- fix various bugs when Encoding crew
- fix keyboard control bugs in Device Creation Mode and Encoding crew
- fix implementing keyboard special (non-ASCII) keys
v 0.0.3
- fix progressbar when researching artifacts
- fix crash in astrogation due to memory corruption
- fix spurious keypresses when pressing alt/control keys
- fix manually entering Astrogation map coordinates
- convert music from MOD to OGG format
- add Data generators from an alternate Ironseed Repository
- all graphics assets in PNG format
- copyright updates
- add devel docs and manual
- fix crashes related to savegames and UPCASE filenames