@@ -1,3 +1,4 @@
+- combat: fix shield (and no shield, and reflective hull) bugs
 - add F1-F4, numpad, Z/X to combat keyboard controls
 - fixes crash in combat with no shields
 - reenable biorithyms color from gray to pulsing red
